<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EventerZgz</string>
    <string name="hello_world">Hola mundo</string>
    <string name="action_settings">Settings</string>

    <string name="welcome">Bienvenido a EventerZGZ</string>
    <string name="saltar">SALTAR</string>
    <string name="finish">FINALIZAR</string>
    <string name="question_categories">"¿En qué categorías estás interesado?"</string>
    <string name="question_population">"¿A quién va dirigidos los eventos?"</string>
    <string name="question_map">"¿Sobre que zona deseas ver eventos?"</string>
    <string name="question_perfil">"¿Cuál es tú perfil?"</string>

    <string name="title_activity_detail_event">Detalle eventos</string>
    <string name="title_activity_list_event">Listado eventos</string>

    <string name="compartir">Compartir</string>
    <string name="compartircon">Compartir con: </string>
    <string name="verMas">Ver más</string>
    <string name="action_search">Search</string>
    <string name="contenido_no_disponible">Contenido no disponible</string>

    <string name="direccion">Dirección:</string>
    <string name="lugar">Lugar:</string>
    <string name="telefono">Teléfono:</string>
    <string name="mail">Mail:</string>
    <string name="conexion">Conexión:</string>
    <string name="web">Conexión:</string>
</resources>
