<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.eventerzgz.view.activities.DetailEventActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <!-- IMAGEN -->

        <RelativeLayout
            android:id="@+id/layoutImage"
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <ImageView
                android:id="@+id/imageViewDetail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />


            <TextView
                android:id="@+id/textViewCategoria"
                style="@style/textShadow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:background="@android:color/transparent"
                android:fontFamily="bold"
                android:gravity="left"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="2dp"
                android:text="Subcategoria"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layoutLinea"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/layoutImage"
            android:background="@color/primary_color"
            android:orientation="horizontal"></LinearLayout>
        <!-- INFO -->
        <LinearLayout
            android:id="@+id/layoutInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutLinea"
            android:background="@color/white"
            android:orientation="vertical"
            android:tag="sticky">

            <TextView
                android:id="@+id/textViewTitle"
                style="@style/textShadow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="50dp"
                android:background="@color/white"
                android:fontFamily="bold"
                android:gravity="left"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:textColor="@color/primary_color"
                android:textSize="22sp"
                tools:ignore="HardcodedText" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:fontFamily="bold"
                    android:gravity="left"
                    android:textStyle="bold"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:text="@string/direccion"
                    android:textColor="@color/primary_color"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewDireccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginRight="10dp"
                    android:background="@color/white"
                    android:fontFamily="bold"
                    android:gravity="left"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:textColor="@color/primary_color"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:fontFamily="bold"
                    android:gravity="left"
                    android:textStyle="bold"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:text="@string/telefono"
                    android:textColor="@color/primary_color"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginRight="10dp"
                    android:background="@color/white"
                    android:fontFamily="bold"
                    android:gravity="left"
                    android:onClick="onClickDetail"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:textColor="@color/primary_color"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:fontFamily="bold"
                    android:gravity="left"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:textStyle="bold"
                    android:text="@string/conexion"
                    android:textColor="@color/primary_color"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewConexion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginRight="10dp"
                    android:background="@color/white"
                    android:fontFamily="bold"
                    android:gravity="left"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:textColor="@color/primary_color"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:fontFamily="bold"
                    android:gravity="left"
                    android:textStyle="bold"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:text="@string/lugar"
                    android:textColor="@color/primary_color"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewLugar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginRight="10dp"
                    android:background="@color/white"
                    android:fontFamily="bold"
                    android:gravity="left"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:textColor="@color/primary_color"
                    android:textSize="16sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:fontFamily="bold"
                        android:gravity="left"
                        android:textStyle="bold"
                        android:paddingBottom="5dp"
                        android:paddingLeft="10dp"
                        android:paddingTop="5dp"
                        android:text="@string/web"
                        android:textColor="@color/primary_color"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textViewWeb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginRight="10dp"
                        android:background="@color/white"
                        android:fontFamily="bold"
                        android:gravity="left"
                        android:onClick="onClickDetail"
                        android:paddingBottom="5dp"
                        android:paddingLeft="10dp"
                        android:paddingTop="5dp"
                        android:textColor="@color/primary_color"
                        android:textSize="16sp" />
            </LinearLayout>


            <TextView
                android:id="@+id/textViewDescription"
                style="@style/textShadow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/white"
                android:gravity="left"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                tools:ignore="HardcodedText" />

        </LinearLayout>


        <include
            android:id="@+id/layoutMap"
            layout="@layout/view_map"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/layoutInfo" />

        <ImageButton
            android:id="@+id/btnCreate"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/layoutImage"
            android:layout_marginRight="15dp"
            android:layout_marginTop="-30dp"
            android:background="@drawable/btn_fab_default"
            android:onClick="onClickDetail"
            android:src="@drawable/calendar"
            android:textSize="28sp" />
    </RelativeLayout>
</ScrollView>